# pal_sea_arm-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: arm_controller.yaml
config/inertia_shaping_controller/: XS_analytic_params.yaml
debian/: changelog  control  copyright  gbp.conf  rules
gazebo/: gazebo.urdf.xacro
launch/: ft_sensor_controller.launch.py  sea_state_broadcaster_controller.launch.py
meshes/arm_tiago_pro/straight-wrist/: arm_6_link.stl  arm_6_link_collision.stl
pal_sea_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_sea_arm_bringup/: CHANGELOG.rst  package.xml
pal_sea_arm_bringup/launch/: pal_sea_arm_bringup.launch.py
pal_sea_arm_bringup/scripts/: calibrate_ft_sensor.sh
pal_sea_arm_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_sea_arm_controller_configuration/config/: arm_controller.yaml  arm_gravity_compensation_controller_effort.yaml  arm_gravity_compensation_controller_torque.yaml  ati_controller.yaml  gazebo_controller_manager_cfg.yaml  rokubi_controller.yaml
pal_sea_arm_controller_configuration/config/inertia_shaping_controller/: S_minus_params.yaml  S_plus_analytic_params.yaml  S_plus_params.yaml
pal_sea_arm_controller_configuration/launch/: arm_controller.launch.py  default_controllers.launch.py  gravity_compensation_controller.launch.py  inertia_shaping_controllers.launch.py
pal_sea_arm_controller_configuration/module/: 10_default_controllers.yaml
pal_sea_arm_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  pal_sea_arm_utils.py
pal_sea_arm_description/config/: pal_sea_arm_configuration.yaml  show.rviz
pal_sea_arm_description/launch/: robot_state_publisher.launch.py  show.launch.py
pal_sea_arm_description/meshes/arm_tiago_pro/straight-wrist/: arm_5_link.stl  arm_5_link_collision.stl
pal_sea_arm_description/module/: 10_robot_state_publisher.yaml
pal_sea_arm_description/mujoco/: mj_tags.xacro
pal_sea_arm_description/pal_sea_arm_description/: launch_arguments.py
pal_sea_arm_description/robots/: pal_sea_arm.urdf.xacro
pal_sea_arm_description/test/: test_description.launch.py  test_xacro.py
pal_sea_arm_description/urdf/arm/: arm.ros2_control.xacro  arm.urdf.xacro
pal_sea_arm_description/urdf/arm/arm_limits/pal-sea-arm-standalone/: spherical-wrist.limits.xacro
pal_sea_arm_description/urdf/arm/arm_limits/tiago-pro/: arm.limits.xacro  spherical-wrist.limits.xacro  straight-wrist.limits.xacro
pal_sea_arm_description/urdf/arm/arm_limits/tiago-sea/: arm.limits.xacro  straight-wrist.limits.xacro
pal_sea_arm_description/urdf/arm/arm_limits/tiago-sea-dual/: arm.limits.xacro  straight-wrist.limits.xacro
pal_sea_arm_description/urdf/arm/arm_properties/pal-sea-arm-standalone/: arm.properties.xacro  straight-wrist.properties.xacro
pal_sea_arm_description/urdf/arm/arm_properties/tiago-pro/: spherical-wrist.properties.xacro  straight-wrist.properties.xacro
pal_sea_arm_description/urdf/arm/arm_properties/tiago-sea/: arm.properties.xacro
pal_sea_arm_description/urdf/arm/arm_properties/tiago-sea-dual/: arm.properties.xacro  straight-wrist.properties.xacro
pal_sea_arm_description/urdf/end_effector/: grasping_frames.xacro
ros2_control/: ros2_control.urdf.xacro
rpm/: ros-humble-pal-sea-arm-bringup.spec  ros-humble-pal-sea-arm-description.spec  ros-humble-pal-sea-arm.spec  template.spec
scripts/: regen_em_file.py
test/: test_xacro.py
urdf/: calibration_constants.urdf.xacro
urdf/arm/arm_limits/pal-sea-arm-standalone/: arm.limits.xacro  straight-wrist.limits.xacro
urdf/arm/arm_properties/pal-sea-arm-standalone/: spherical-wrist.properties.xacro
urdf/arm/arm_properties/tiago-pro/: arm.properties.xacro
urdf/arm/arm_properties/tiago-sea/: straight-wrist.properties.xacro
urdf/end_effector/: end_effector.urdf.xacro
urdf/end_effector_camera/: end_effector_camera.urdf.xacro
