<?xml version="1.0"?>
<package format="3">
  <name>pal_sea_arm</name>
  <version>1.20.1</version>
  <description>The pal_sea_arm package</description>

  <maintainer email="narcis.miguel@pal-robotics.com">Narcis Miguel</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pal_sea_arm_controller_configuration</exec_depend>
  <exec_depend>pal_sea_arm_description</exec_depend>
  <exec_depend>pal_sea_arm_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
